fixed alignment issues for mobile view

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
     border-radius: 50%;
     background-color: rgb(134, 26, 26);
     position: relative;
-    bottom: 120px;
+    bottom: 170px;
 }
 
 .profile-text{
